Development -Satishxi7/src/objects/Sales_Coach_Activity__c.object
<CustomObject>
    <fields>
        <fullName>Activity_Details__c</fullName>
        <label>Activity Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ordering_Number__c</fullName>
        <label>Ordering Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Coach_Stage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Coach Stage</label>
        <referenceTo>Sales_Coach_Stage__c</referenceTo>
        <relationshipLabel>Sales Coach Activities</relationshipLabel>
        <relationshipName>Sales_Coach_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Sales Coach Activity</label>
    <nameField>
        <displayFormat>SCAN-{000000}</displayFormat>
        <label>Sales Coach Activity Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Coach Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>